--- a/src/Routes/StaticPage/static.css
+++ b/src/Routes/StaticPage/static.css
@@ -40,11 +40,14 @@
     border-radius: 50%;
     padding-left: 5px;
 }
+.authorname{
+    text-align: start;
+}
 
 .profileName{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .commonPic1{
@@ -143,7 +146,21 @@
     top: 48vh;
     left: 10%;
 }
+.latestimgstatic{
+    width:270px;
+    height:200px;
+  }
 
+  .latestboxstatic{
+    display: flex;
+    gap: 24px;
+    padding-top: 2rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .datesstatic{
+    color: #9E9fA5;
+  }
 
 @media only screen and (max-width:600px){
     .commonPageHr{
@@ -153,15 +170,42 @@
     .commonContainer{
         width:90%;
     }
+    .commonPic1 {
+        /* height: 60px; */
+        /* display: flex; */
+        gap: 10px;
+    }
+    
+    
+
+    .datesstatic {
+        color: #9E9fA5;
+        font-size: 12px;
+    }
     .latestbox{
-      width:90% ;
+      width:100% ;
+      /* padding-left: 10%; */
  
+    }
+    .theComHeading{
+        font-size: 20px;
+    }
+    .latestboxstatic{
+        width:100% ;
+      padding-left: 10%;
     }
     .latestimg{
         /* width:80%; */
+        width:80vw;
+    }
+    .latestimgstatic{
+        width:80vw;
     }
     .commonfix{
         display: none;
+    }
+    .staticpadding{
+        padding:1rem 0;
     }
 }
 
@@ -174,14 +218,20 @@
         width:90%;
     }
 
-    .latestbox{
-        padding-left: 50px;
+    .latestboxstatic{
+        padding:0px 17%
+        /* padding-left: 50px; */
   
       }
-      .latestimg{
-          width:90%;
+      .staticpadding{
+        padding-bottom: 3rem;
+      }
+      .latestimgstatic{
+          width:100%;
+          height:250px;
       }
       .commonfix{
         display: none;
       }
+
 }
