--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -36,7 +36,7 @@ a{
   .footerflex{
     height: fit-content;
     display: block;
-
+   padding: 2%;
 
   }
 
@@ -59,9 +59,11 @@ a{
 
   .footerflex{
     height: fit-content;
-    display: block;
+    /* display: block; */
+    padding-top: 8px;
   }
 
+  
   .footerfirstbox{
     padding: 1rem ;
   }
@@ -69,9 +71,16 @@ a{
   .footersecondbox{
     padding:0 1rem 1rem;
   }
-
+/* 
   .footerthirdbox{
-    padding:1rem;
+    /* padding:1rem; */
+  /* }  */
+
+  .secondcommoncontainer{
+    display: flex;
+    width: 91%;
+    justify-content: space-between;
+    padding-bottom: 1rem;
   }
 }
 
