--- a/src/Routes/Home/Home.css
+++ b/src/Routes/Home/Home.css
@@ -9,6 +9,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 8px;
     width: 100%;
+    height: 416px;
     /* height: 100%; */
     /* position: relative; */
     /* max-height: 403px; */
@@ -48,7 +49,7 @@
   border-radius: 3px;
   }
   .maincontainer{
-    width: 70%;
+    width: 80%;
   }
 
   .homecontainer{
